Сервис готов для работы с инмемори базой данных
