# tasks/backend/GO/gremiha3/docs/swagger.json
@@ -9,6 +9,11 @@
     "paths": {
         "/item": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return item with \"id\" number.",
                 "tags": [
                     "Item"
@@ -40,6 +45,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Add product to order.",
                 "produces": [
                     "application/json"
@@ -83,6 +93,11 @@
         },
         "/items": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return items list by order id.",
                 "produces": [
                     "application/json"
@@ -141,6 +156,11 @@
         },
         "/order": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return Order with \"id\" number.",
                 "tags": [
                     "Order"
@@ -172,6 +192,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Создание заказа для дальнейшего его заполнения.",
                 "produces": [
                     "application/json"
@@ -215,6 +240,11 @@
         },
         "/orders": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return Orders list.",
                 "produces": [
                     "application/json"
@@ -273,6 +303,11 @@
         },
         "/orderstate": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return OrderState with \"id\" number.",
                 "tags": [
                     "OrderState"
@@ -304,6 +339,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Создание типа статуса заказа.",
                 "produces": [
                     "application/json"
@@ -347,6 +387,11 @@
         },
         "/orderstates": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return OrderStates list.",
                 "produces": [
                     "application/json"
@@ -427,6 +472,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Save register data of user in Repo.",
                 "produces": [
                     "application/json"
@@ -549,6 +599,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Save register data of user in Repo.",
                 "produces": [
                     "application/json"
@@ -727,6 +782,11 @@
         },
         "/user": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Получить пользователя по его id ли логину.",
                 "tags": [
                     "User"
@@ -768,6 +828,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Return users list.",
                 "produces": [
                     "application/json"
