# tasks/backend/GO/gremiha3/internal/app/transport/httpserver/handler_user.go
@@ -6,6 +6,7 @@ import (
 	"strconv"
 
 	"github.com/KozlovNikolai/test-task/internal/app/domain"
+	"github.com/KozlovNikolai/test-task/internal/pkg/config"
 	"github.com/gin-gonic/gin"
 )
 
@@ -16,6 +17,7 @@ import (
 // @Param        id  query   string  false  "id of the user" example(1) default(1)
 // @Param        login  query   string  false  "login of the user" example(cmd@cmd.ru) default(cmd@cmd.ru)
 // @Tags			User
+// @Security			BearerAuth
 // @Success			200 {object} UserResponse
 // @failure			404 {string} err.Error()
 // @Router			/user [get]
@@ -23,6 +25,14 @@ func (h HttpServer) GetUser(c *gin.Context) {
 	var userRequest UserRequest
 	id_query := c.Query("id")
 	login_query := c.Query("login")
+
+	// check auth
+	userCtx, err := getUserFromContext(c)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"get orders": domain.ErrNoUserInContext})
+		return
+	}
+
 	//
 	if login_query != "" {
 		userRequest.Login = login_query
@@ -40,6 +50,11 @@ func (h HttpServer) GetUser(c *gin.Context) {
 			c.JSON(http.StatusInternalServerError, gin.H{"": err.Error()})
 			return
 		}
+		// auth login
+		if userCtx.Login() != domainUser.Login() && userCtx.Role() != config.AdminRole {
+			c.JSON(http.StatusUnauthorized, gin.H{"invalid user id or role": domain.ErrInvalidUserLogin.Error()})
+			return
+		}
 		response := toResponseUser(domainUser)
 		c.JSON(http.StatusOK, response)
 		return
@@ -51,7 +66,11 @@ func (h HttpServer) GetUser(c *gin.Context) {
 			c.JSON(http.StatusBadRequest, gin.H{"invalid-user-id": err.Error()})
 			return
 		}
-
+		// auth user id
+		if userCtx.ID() != userID && userCtx.Role() != config.AdminRole {
+			c.JSON(http.StatusUnauthorized, gin.H{"invalid user id or role": domain.ErrInvalidUserID.Error()})
+			return
+		}
 		user, err := h.userService.GetUserByID(c, userID)
 		if err != nil {
 			if errors.Is(err, domain.ErrNotFound) {
@@ -65,7 +84,17 @@ func (h HttpServer) GetUser(c *gin.Context) {
 		c.JSON(http.StatusOK, response)
 		return
 	}
-
+	user, err := h.userService.GetUserByID(c, userCtx.ID())
+	if err != nil {
+		if errors.Is(err, domain.ErrNotFound) {
+			c.JSON(http.StatusNotFound, gin.H{"user-not-found": err.Error()})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"": err.Error()})
+		return
+	}
+	response := toResponseUser(user)
+	c.JSON(http.StatusOK, response)
 }
 
 // GetUsers is ...
@@ -73,6 +102,7 @@ func (h HttpServer) GetUser(c *gin.Context) {
 // @Summary			Получить список всех пользователей.
 // @Description		Return users list.
 // @Tags			User
+// @Security		BearerAuth
 // @Param        limit  query   string  true  "limit records on page" example(10) default(10)
 // @Param        offset  query   string  true  "start of record output" example(0) default(0)
 // @Produce      json
